--- a/src/App.scss
+++ b/src/App.scss
@@ -171,21 +171,76 @@ h6 {
 
 // Shopping Cart Styles
 
-
-.item-container {
+.super {
 	width: 1100px;
 	margin: 0 auto;
+}
+
+.shop-container {
+	display: flex;
+}
+
+.item-container {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 
 	.item {
-		border: 1px solid red;
+		border: 1px solid rgb(184, 184, 184);
 		text-align: center;
+		padding: 10px;
 
 		img {
-			width: 180px;
-			height: 250px;
+			width: 120px;
+			height: 180px;
 			
 		}
+		.title {
+			font-size: 12px;
+		}
+		hr {
+			width: 8%;
+			border: 0.5px solid rgb(248, 164, 155);
+			border-radius: 5px;
+		}
+		.price-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		.price {
+			font-size: 14px;
+		}
+		.installment {
+			color: #9c9b9b;
+			font-size: 9px;
+		}
+		.installment-price {
+			font-weight: bold;
+			color: #9c9b9b;
+			font-size: 10px;
+		}
+		button {
+			width: 100%;
+			color: #fff;
+			padding: 10px 0;
+			margin-top: 10px;
+			cursor: pointer;
+			background-color: black;
+		}
+	}
+}
+.item:hover {
+	button {
+		background: yellowgreen;
+	}
+}
+
+.size-container {
+	div {
+		width: 200px;
+		padding: 10px;
+	}
+	.size {
+		
 	}
 }
