--- a/src/App.scss
+++ b/src/App.scss
@@ -171,13 +171,46 @@ h6 {
 
 // Shopping Cart Styles
 
-.super {
-	width: 1100px;
-	margin: 0 auto;
-}
+// .super {
+// 	width: 1100px;
+// 	margin: 0 auto;
+// }
 
 .shop-container {
 	display: flex;
+	max-width: 1000px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.size-container {
+	div {
+		width: 130px;
+		padding: 10px;
+	}
+	h3 {
+		font-size: 12px;
+	}
+	.sizes {
+		display: flex;
+		flex-wrap: wrap;
+
+		.size {
+			width: 20px;
+			height: 20px;
+			padding: 2px;
+			border-radius: 50%;
+			background-color: #ececec;
+			font-size: 7px;
+			cursor: pointer;
+			margin: 3px;
+			
+		}
+	}
+	
+	.size:hover {
+		border: 0.5px solid;
+	}
 }
 
 .item-container {
@@ -185,7 +218,6 @@ h6 {
 	grid-template-columns: repeat(4, 1fr);
 
 	.item {
-		border: 1px solid rgb(184, 184, 184);
 		text-align: center;
 		padding: 10px;
 
@@ -230,17 +262,8 @@ h6 {
 	}
 }
 .item:hover {
+	border: 0.5px solid rgb(218, 218, 218);
 	button {
 		background: yellowgreen;
-	}
-}
-
-.size-container {
-	div {
-		width: 200px;
-		padding: 10px;
-	}
-	.size {
-		
 	}
 }
