--- a/src/App.scss
+++ b/src/App.scss
@@ -211,6 +211,12 @@ h6 {
 	.size:hover {
 		border: 0.5px solid;
 	}
+	.size-btn {
+		font-size: 8px;
+		border-radius: 50%;
+		margin: 5px;
+		padding: 5px 7px;
+	}
 }
 
 .item-container {
@@ -266,4 +272,7 @@ h6 {
 	button {
 		background: yellowgreen;
 	}
+}
+.active {
+	background-color: tomato;
 }
