--- a/src/App.scss
+++ b/src/App.scss
@@ -218,6 +218,13 @@ h6 {
 		padding: 5px 7px;
 	}
 }
+.main-container {
+	.sort-bar {
+			display: flex;;
+			justify-content: space-between;
+	
+	}
+}
 
 .item-container {
 	display: grid;
