--- a/src/App.scss
+++ b/src/App.scss
@@ -300,14 +300,74 @@ h6 {
 
 // Slider Cart Styles
 
-.cart-container {
-	position: relative;
+.drawer-main{
+	width: 460px;
+	background: #1B1A20;
+	height: 100%;
+	position: fixed;
+	right: 0;
+	text-align: center;
+	transition: all 500ms ease-out;
+	/*position: relative;*/
+	overflow-x: auto;
+	padding: 10px;
+}
+.fas{
+	font-size: 36px;
+}
+.items-parent{
+	color: #fff;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 10px;
+}
+.item-image{
+	height: 100px;
+	width: 80px;
+}
+.items-info{
+	text-align: left;
+	font-size: 0.9rem;
+}
+.cart-icon{
+	font-size: 36px;
+	size: 3x;
+}
+.drawer-main hr {
+	width: 90%;
+}
+.drawer-btn{
+	margin: 20px;
+	padding: 10px;
+	background: black;
+	width: 20rem;
+	font-size: 1rem;
+	font-weight: bold;
+	color: #fff;
+	outline: 0;
+	border: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
+.checkout{
+	position: fixed;
+	/*right: 120px;*/
+	bottom: 0;
+	z-index: 1;
+	height: 6rem;
+	background: #1B1A20;
+	width: 500px;
+	/*box-shadow: 2px 10px 2px 2px #1B1A30;*/
+}
+.remove-item{
+	position: absolute;
+	right: 20px;
+	color: black;
+	font-weight: bold;
+}
+.remove-item:hover{
+	color: #fff;
 
-	.cart-item {
-		width: 400px;
-		height: 100%;
-		position: fixed;
-		right: 0;
-		background-color: lightgrey;
-	}
 }
