--- a/src/App.scss
+++ b/src/App.scss
@@ -172,8 +172,7 @@ h6 {
 // Shopping Cart Styles
 
 // .super {
-// 	width: 1100px;
-// 	margin: 0 auto;
+// 	padding: 60px;
 // }
 
 // Header Styles
@@ -181,20 +180,22 @@ h6 {
 .header-container {
 	display: flex;
 	justify-content: flex-end;
+	
 
 	// width of logo background div
 	.cart-logo {
 		width: 60px;
 		height: 60px;
 		background-color: black;
+		position: absolute;
 
 		img {
-			width: 40px;
-			height: 40px;
+			width: 30px;
+			height: 30px;
 			background-color: black;
 			position: absolute;
-			right: 11px;
-			top: 9px;
+			right: 16px;
+			top: 14px;
 		}
 	}
 	// home page price bubble
@@ -213,9 +214,10 @@ h6 {
 
 .shop-container {
 	display: flex;
-	max-width: 1100px;
+	max-width: 1200px;
 	width: 100%;
 	margin: 0 auto;
+	margin-top: 70px;
 }
 
 .size-container {
@@ -342,20 +344,26 @@ h6 {
 	position: absolute;
 	right: 0;
 	text-align: center;
-	transform: translate(0, 0);
-	overflow-x: auto;
+	// transform: translateX(0);
+	// transition: transform 1s ease-in-out;
+
+	.empty-notification {
+		font-size: 18px;
+		color: #fff;
+		margin-top: 40px;
+	}
 
 	.cart-close-btn {
 		position: absolute;
-		left: -15%;
+		top: 0;
+		left: -10%;
     height: 50px;
     width: 50px;
     padding: 15px 15px 25px;
     font-size: 1.2rem;
-		background-color: black;
-		border: 1px solid #fff;
-		z-index: 1;
-		color: black;
+		background-color: #1B1A20;
+		z-index: 4;
+		color: #fff;
     cursor: pointer;
 	}
 
@@ -372,7 +380,9 @@ h6 {
 		font-size: 36px;
 	}
 		p {
-			padding-left: 10px;
+			padding-left: 15px;
+			font-weight: bold;
+			font-size: 20px;
 		}
 	}
 	//newly added
@@ -382,21 +392,10 @@ h6 {
     right: 0;
     z-index: 2;
 	}
-	.cart-close-container, .cart-open-container {
-    transition: -webkit-transform .2s ease-in-out;
-    transition: transform .2s ease-in-out;
-    transition: transform .2s ease-in-out,-webkit-transform .2s ease-in-out;
-	}
-	.cart-open-container {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-	}
-
-
 
 
 	.pricebubble-in-cart {
-		background:yellow;
+		background:#eabf00;
 		border-radius:50%;
 		color:black;
 		height:15px;
@@ -404,19 +403,20 @@ h6 {
 		font-size: 10px;
 		position: absolute;
 		top: 28px;
-		left: 131px;
+		left: 199px;
 	}
 	.cart-items-parent {
 		color: #fff;
 		display: flex;
 		justify-content: start;
 		align-items: center;
-		padding: 8px;		
+		padding: 8px;
+		border-bottom: 0.5px dotted rgb(78, 48, 28);
 	
 		.cart-item-price {
 			padding-left: 20px;
-			color: rgb(168, 168, 95);
-			font-size: 12px;;
+			color: #eabf00;
+			font-size: 14px;;
 			position: absolute;
 			right: 10px;
 		}
@@ -434,10 +434,12 @@ h6 {
 			font-size: 14px;
 			
 			.remove-item {
-				position: absolute;
-				right: 20px;
+				position: relative;
+				right: -325px;
+				top: -5px;
 				color: black;
 				font-weight: bold;
+				cursor: pointer;
 			}
 			.cart-item-title {
 				font-size: 14px;
@@ -461,21 +463,34 @@ h6 {
 			color: red; 
 		}
 		.cart-item-price {
-			color: rgb(255, 255, 103);
+			color: #eabf00;
 		}
 	}
-	.division {
-		width: 80%;
-		margin: 5px auto;
-		border: 0.3px solid rgb(209, 148, 148);
-	}
+	// .division {
+	// 	width: 80%;
+	// 	margin: 0 auto;
+	// 	border: 0.3px solid rgb(209, 148, 148);
+	// }
 	// Checkout section styles
 	.checkout {
-		position: fixed;
+		position: absolute;
 		bottom: 0;
 		height: 15%;
 		background: #1B1A20;
 		width: 100%;
+		z-index: 2;
+
+		.subtotal {
+			display: flex;
+			justify-content: space-between;
+			margin: 0 20px;
+			font-size: 18px;
+
+			.subtotal-price {
+				color: #eabf00;
+				font-size: 24px;
+			}
+		}
 	}
 	.drawer-btn {
 		margin: 20px;
