Change positioning of price bubble in cart

--- a/src/App.scss
+++ b/src/App.scss
@@ -411,8 +411,10 @@ h6 {
 		width: 15px;
 		font-size: 10px;
 		position: absolute;
-		top: 28px;
-		left: 199px;
+		// top: 28px;
+		// left: 199px;
+		top: 4%;
+		left: 45%;
 	}
 	.cart-items-parent {
 		color: #fff;
@@ -575,8 +577,6 @@ h6 {
 
 	.drawer-main {
 		width: 90%;
-		// position: absolute;
-		// right: 0;
 	}
   
 }
