--- a/src/App.scss
+++ b/src/App.scss
@@ -350,9 +350,10 @@ h6 {
 	width: 450px;
 	background: #1B1A20;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	right: 0;
 	text-align: center;
+	overflow-y: auto;
 	// transform: translateX(0);
 	// transition: transform 1s ease-in-out;
 
@@ -362,19 +363,19 @@ h6 {
 		margin-top: 40px;
 	}
 
-	.cart-close-btn {
-		position: absolute;
-		top: 0;
-		left: -10%;
-    height: 50px;
-    width: 50px;
-    padding: 15px 15px 25px;
-    font-size: 1.2rem;
-		background-color: #1B1A20;
-		z-index: 4;
-		color: #fff;
-    cursor: pointer;
-	}
+	// .cart-close-btn {
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: -10%;
+  //   height: 50px;
+  //   width: 50px;
+  //   padding: 15px 15px 25px;
+  //   font-size: 1.2rem;
+	// 	background-color: #1B1A20;
+	// 	z-index: 4;
+	// 	color: red;
+  //   cursor: pointer;
+	// }
 
 	.drawer-header {
 		display: flex;
@@ -487,7 +488,7 @@ h6 {
 	// Checkout section styles
 	.checkout {
 		position: absolute;
-		bottom: 0;
+		bottom: 1vh;
 		height: 15%;
 		background: #1B1A20;
 		width: 100%;
@@ -496,7 +497,7 @@ h6 {
 		.subtotal {
 			display: flex;
 			justify-content: space-between;
-			margin: 0 20px;
+			margin: 20px;
 			font-size: 18px;
 
 			.subtotal-price {
@@ -519,6 +520,20 @@ h6 {
 		text-transform: uppercase;
 		letter-spacing: 1px;
 	}
+}
+
+.cart-close-btn {
+	position: fixed;
+	top: 0;
+	right: 445px;
+	height: 50px;
+	width: 50px;
+	padding: 15px 15px 25px;
+	font-size: 1.2rem;
+	background-color: #1B1A20;
+	z-index: 4;
+	color: #fff;
+	cursor: pointer;
 }
 
 // Media Queries for responsiveness
